# django-better-search

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  README.md  pyproject.toml
django_separate_search/: __init__.py  admin.py  apps.py  utils.py
django_separate_search/templates/admin/: custom_change_list.html  custom_pagination.html
django_separate_search/templatetags/: custom_paginator.py
